--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="banner">
             <div>
                 <h3 class="banner-subtitle">Hi, I am</h3>
-                <h1 class="banner-title">Nuhath khan lahif</h1>
+                <h1 class="banner-title">Nuhath Khan Lahif</h1>
                 <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download Cv</button>
             </div>
@@ -50,8 +50,39 @@
                 <p class="info-description">Dhaka,Bangladesh</p>
             </div>
         </div>
+       </section>
+       <!-- About me section -->
+       <section class="what-i-do">
+        <h3 class="section-title">What I do</h3>
+       <div class="skill-container">
+        <div class="skill">
+            <img src="images/icons/js.png" alt="">
+            <p class="skill-title">Vanilla JavaScript</p>
+            <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo consequatur sit hic rem nisi temporibus?</p>
+        </div>
+        <div class="skill">
+            <img src="images/icons/react.png" alt="">
+            <p class="skill-title">React</p>
+            <p class="skill-description">Debitis hic minima, odio commodi, doloribus tempore asperiores recusandae animi maiores dolorem molestiae. Dolorem, deleniti.</p>
+        </div>
+        <div class="skill">
+            <img src="images/icons/nodejs.png" alt="">
+            <p class="skill-title">Node.js</p>
+            <p class="skill-description">Corporis asperiores quod, assumenda recusandae minima, optio eos eligendi repudiandae sed magnam quam dolore ducimus.</p>
+        </div>
+        <div class="skill">
+            <img src="images/icons/mongo.png" alt="">
+            <p class="skill-title">MongoDB</p>
+            <p class="skill-description">Aperiam maxime, necessitatibus facilis deleniti eveniet rem quos odio praesentium, autem commodi aliquam ducimus consectetur.</p>
+        </div>
+       </div>
+       </section>
 
+    <!-- resume section -->
 
+       <section class="resume">
+        <h3 class="section-title">A Summary of My Resume</h3>
+        <div class="resume-content"></div>
 
        </section>
     </main>
